--- a/src/app/features/po/initiate-po/initiate-po.component.html
+++ b/src/app/features/po/initiate-po/initiate-po.component.html
@@ -7,11 +7,11 @@
     <mat-horizontal-stepper [linear]="true" (selectionChange)="selectionChange($event)" #stepper [ngClass]="isMobile ? 'm-stepper' : ''">
       <mat-step stepControl="stepOne">
         <ng-template matStepLabel>Select Supplier</ng-template>
-        <app-po-supplier [poData]="existingPoData" (selectedSupplier)="getSupplier($event)"></app-po-supplier>
+        <app-po-supplier [poData]="existingPoData" [searchVal]="searchText" (selectedSupplier)="getSupplier($event)"></app-po-supplier>
       </mat-step>
       <mat-step stepControl="stepSecond">
         <ng-template matStepLabel>Project & Material</ng-template>
-        <app-po-project-material [existingPoData]="existingPoData" (selectedMaterial)="getMaterial($event)"> </app-po-project-material>
+        <app-po-project-material [existingPoData]="existingPoData" [searchVal]="searchText" (selectedMaterial)="getMaterial($event)"> </app-po-project-material>
       </mat-step>
       <mat-step>
         <ng-template matStepLabel>Add Quantity & Makes</ng-template>
