--- a/src/app/features/first-login/update-info/update-info.component.html
+++ b/src/app/features/first-login/update-info/update-info.component.html
@@ -134,10 +134,10 @@
                 <mat-error *ngIf="userInfoForm.controls['turnOverId'].errors && (userInfoForm.controls['turnOverId'].dirty || userInfoForm.controls['turnOverId'].touched)">
                   <mat-error *ngIf="userInfoForm.controls['turnOverId'].hasError('required')">Annual Turn over is required</mat-error>
                 </mat-error>
-                <div *ngIf="users.roleName === 'l1'" class="row height-12 display-flex align-center m-t-10 border-round full-border-main width-70">
+                <div *ngIf="users.roleName === 'l1'" class="row height-14 display-flex align-center m-t-10 border-round full-border-main width-70">
                   <div class="col-xs-6 color-grey text-semi-bold p-r-0 fontsize-15-px">Base Currency</div>
                   <div class="col-xs-6 p-l-0">
-                    <mat-form-field class="width-90 border-select mat-form-field-infix-padding dropdown-padding mat-form-field-flex-mm-padding">
+                    <mat-form-field class="width-90 border-select mat-form-field-infix-padding mat-form-field-flex-mm-padding">
                       <mat-label>Search Currency</mat-label>
                       <mat-select formControlName="baseCurrency">
                         <div class="display-flex">
