--- a/src/app/shared/components/multi-select-search/multi-select-search.component.html
+++ b/src/app/shared/components/multi-select-search/multi-select-search.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="config?.list">
+<div *ngIf="config?.list" class="multi-sarch-item">
 
     <form *ngIf="form" [formGroup]="form">
         <mat-form-field class="display-block border-bottom border-dark drp-inpt">
