--- a/src/app/features/dashboard/bom/bom.component.html
+++ b/src/app/features/dashboard/bom/bom.component.html
@@ -8,13 +8,13 @@
             <div class="row">
                 <div class="col-xs-6 col-md-6">
 
-                    <div class="row m-t-5 m-l-5">
+                    <div class="row m-l-5" [ngClass]="isMobile ? 'm-t-10' : 'm-t-10' ">
                         <!-- Download BOM Link -->
                         <div class="download-bom-excel excl-btn">
                             <ng-container *ngIf="!isMobile; else downloadIconOnly">
                                 <span class="cursor-pointer download-bom-template">
                                     <img src="assets/images/download-arrow-icon.svg" alt="download"
-                                        class="img-fluid m-r-2 height-25-px" />
+                                        class="img-fluid m-r-2" />
                                     <a (click)="downloadExcel('assets/images/bom_template.xlsx')"> Download BOM
                                         Excel</a>
                                 </span>
@@ -22,8 +22,7 @@
 
                             <ng-template #downloadIconOnly>
                                 <span class="cursor-pointer download-bom-template">
-                                    <img src="assets/images/download-arrow-icon.svg" alt="download"
-                                        class="img-fluid m-r-5 height-25-px"
+                                    <img src="assets/images/download-arrow-icon.svg" alt="download" class="img-fluid"
                                         (click)="downloadExcel('assets/images/bom_template.xlsx')" />
                                 </span>
                             </ng-template>
@@ -46,7 +45,7 @@
 
                             <ng-template #uploadIconOnly>
                                 <img src="assets/images/upload-arrow-icon.svg" alt="upload"
-                                    class="img-fluid m-r-2 cursor-pointer" />
+                                    class="img-fluid cursor-pointer" />
                             </ng-template>
                         </div>
 
@@ -55,7 +54,7 @@
                 </div>
                 <div class="col-xs-6 col-md-6 text-right">
 
-                    <div class="m-r-15 m-t-5 m-b-15 d-inline-block">
+                    <div class="m-r-15 m-b-15 d-inline-block" [ngClass]="isMobile ? 'm-t-10' : 'm-t-10' ">
                         <button mat-raised-button class="main-background-color main-button color-white"
                             (click)="saveCategory()" [disabled]="!isFormValid">
                             Add to BOM
@@ -77,7 +76,24 @@
                 </div>
             </div>
 
-            <bom-filter [config]="searchConfig" (getBomFilers)="getFilterBomData($event)"></bom-filter>
+
+            <ng-container *ngIf="!isMobile; else mobileSearch">
+                <bom-filter [config]="searchConfig" (getBomFilers)="getFilterBomData($event)"></bom-filter>
+            </ng-container>
+
+            <ng-template #mobileSearch>
+
+                <div class="width-100 p-l-10 p-r-10 p-t-10 p-b-10 m-b-10 background-white-color text-right">
+                    <button mat-button class="background-white-color main-button main-color" (click)="isFilter = true">
+                        <mat-icon>search
+                        </mat-icon> Search In
+                    </button>
+                </div>
+                <div class="mb-srch" [ngClass]="isFilter ? 'mb-srch__open' : 'mb-srch__close'">
+                    <div class="sdb" (click)="isFilter = false"></div>
+                    <bom-filter [config]="searchConfig" (getBomFilers)="getFilterBomData($event)"></bom-filter>
+                </div>
+            </ng-template>
 
             <ng-container *ngIf="tabs && tabs.length">
                 <mat-tab-group [selectedIndex]="selectedIndex" (selectedTabChange)="tabClick($event)">
