--- a/src/app/shared/header/sidenav-list.html
+++ b/src/app/shared/header/sidenav-list.html
@@ -12,8 +12,8 @@
     </ng-container> -->
   <ng-container *ngIf="data && data.moduleList">
     <ng-container *ngFor="let item of data.moduleList">
-      <div class="sidenav-btns"
-        [ngClass]="(buttonName && (buttonName === item.moduleName)) ? 'display-flex active' : 'display-flex'">
+      <div class="sidenav-btns display-flex"
+        [ngClass]="(buttonName && (buttonName === item.modulePath)) ? 'active' : '' ">
         <a href="javascript:void(0)" mat-list-item (click)="redirect(item.modulePath)">
           <img src="../../../assets/images/sidenav_{{ item.moduleIcon }}" alt="" />
           <span class="p-l-15">
@@ -25,7 +25,7 @@
   </ng-container>
 
   <ng-container *ngIf="isPlanAvailable === 1 && accountOwner === 1">
-    <div [ngClass]="(buttonName && (buttonName === 'My Plans')) ? 'display-flex active' : 'display-flex'">
+    <div class="display-flex" [ngClass]="(buttonName && (buttonName === 'My Plans')) ? 'active' : '' ">
       <a href="javascript:void(0)" mat-list-item (click)="goToMyPlans()">
         <img src="../../../assets/images/sidenav_payment.svg" alt="" />
         <span class="p-l-15">
