--- a/src/assets/scss/pages/bom.scss
+++ b/src/assets/scss/pages/bom.scss
@@ -875,6 +875,13 @@ div.limited-character.bom {
   background-color: #fff;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
   padding:5px;
+  .close{
+    opacity: 1;
+    color: #020202;
+    font-weight: 100;
+    font-size: 32px;
+    line-height: 15px;
+  }
 }
 
 .bom-multi-search{
@@ -918,4 +925,52 @@ th, td{
   font-weight: 500;
     border-radius: 5px;
     background-color: #eff1f5;
+}
+
+.multi-sarch-item{
+  .mat-form-field-type-mat-select .mat-form-field-label{
+      color:#545454;
+  }
+  .mat-form-field-appearance-legacy .mat-form-field-wrapper{
+      padding-top: 15px !important;
+  }
+  .mat-form-field-infix{
+      font-size: inherit;
+  }
+}
+
+.text-sarch-item{
+  .mat-form-field-appearance-legacy .mat-form-field-label{
+      color:#545454;
+  }
+  .mat-form-field-appearance-legacy .mat-form-field-wrapper{
+      padding-top: 15px !important;
+  }
+  .mat-form-field-infix{
+      font-size: inherit;
+  }
+  .mat-icon{
+    color: #545454;
+    margin-right: -15px;
+  }
+}
+
+.cstm-bom-filter-header{
+  background-color: #e7e7e7;
+    margin-top: -4px;
+    margin-left: -4px;
+    margin-right: -4px;
+    margin-bottom: 20px;
+    padding: 8px 20px 2px;
+}
+
+
+@media(max-width: 599px){
+  .excl-btn{
+    border-radius: 50px;
+    padding: 0 10px;
+    span{
+      line-height: 36px;
+    }
+  }
 }
