--- a/src/assets/scss/base/spacing.scss
+++ b/src/assets/scss/base/spacing.scss
@@ -241,7 +241,7 @@ $sides: (top, bottom, left, right); // Leave this variable alone
     //   }
     // }
 
-    .m-rem-#{str-slice($side, 0, 1)}-#{$space}-rem {
+    .m-rem-#{str-slice($side, 0, 1)}-#{$space} {
       margin-#{$side}: #{$space/10}rem !important;
     }
   }
