--- a/src/app/features/indent/indent-dashboard.component.html
+++ b/src/app/features/indent/indent-dashboard.component.html
@@ -47,7 +47,7 @@
             <th mat-header-cell *matHeaderCellDef class="text-align-center">Required Quantity</th>
 
             <td mat-cell *matCellDef="let element; let i = index" class="text-align-center">
-              <mat-form-field [formGroupName]="i" class="border-input table-input">
+              <mat-form-field [formGroupName]="i" class="border-input table-input" [ngClass]="isMobile ? 'width-66' : ''">
                 <input matInput formControlName="quantity" type="text" appTwoDigitDecimaNumber placeholder="Required Quantity" />
               </mat-form-field>
               {{ element.materialUnit }}
@@ -59,7 +59,7 @@
             <th mat-header-cell *matHeaderCellDef>Required Date</th>
 
             <td mat-cell *matCellDef="let element; let i = index">
-              <mat-form-field [formGroupName]="i" class="border-input">
+              <mat-form-field [formGroupName]="i" class="border-input" [ngClass]="isMobile ? 'width-80' : ''">
                 <input
                   matInput
                   formControlName="dueDate"
