--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -1,4 +1,4 @@
-<section class="update-info-profile" *ngIf="users">
+<section class="update-info-profile p-b-20" *ngIf="users" [ngClass]="isMobile ? '' : 'p-t-20'">
   <div class="container">
     <div class="row">
       <div class="col-sm-12 terms-margin-set-width col-md-8 offset-md-2">
