--- a/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
@@ -90,7 +90,7 @@
               </ng-container>
 
               <ng-container matColumnDef="Fullfillment Date" class="date-dialog-add-edit">
-                <th mat-header-cell *matHeaderCellDef class="fulfillment-date-col">Fullfillment Date</th>
+                <th mat-header-cell *matHeaderCellDef class="fulfillment-date-col">Fulfillment Date</th>
                 <td mat-cell *matCellDef="let element; let i = index" class="fulfillment-date-col">
                   <mat-form-field class="border-input" [ngClass]="isMobile ? 'p-r-10' : ''" [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)">
                     <!-- <mat-label>Fullfil </mat-label> -->
