--- a/src/app/features/global-store/project-wise/project-wise.component.html
+++ b/src/app/features/global-store/project-wise/project-wise.component.html
@@ -79,7 +79,7 @@
 </ng-container>
 
 <ng-template #noData>
-  <p class="text-align-center m-t-50">No material exists for current search</p>
+  <p class="text-align-center m-t-50">No projects exists for current search</p>
 </ng-template>
 
 <ng-container *ngIf="paginationConfig && isPaginationShow">
